# mcp-demo-aviation-weather

./: README.md  pyproject.toml
src/mcp_aviation_weather/: __init__.py  __main__.py  server.py
