[project]
name = "mcp-demo"
version = "0.1.0"
description = "MCP Server for Aviation weather"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-demo = "mcp_aviation_weather:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aviation_weather"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"